--- a/package.json
+++ b/package.json
@@ -31,12 +31,20 @@
     "babel-register": "^6.22.0",
     "body-parser": "^1.17.1",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.1",
     "dotenv": "^4.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
+    "jsx-html-class": "^1.0.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "mongoose": "^4.9.7",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.17.0",
+    "svg-loader": "0.0.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
