--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "body-parser": "^1.17.1",
+    "bootstrap": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
     "dotenv": "^4.0.0",
@@ -51,6 +52,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
